--- a/src/App.css
+++ b/src/App.css
@@ -24,15 +24,50 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main_container{
+  max-width: 70%;
+  width: 60%;
+}
+
+.search_container {
+  display: flex;
+}
+
+.search_container > div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+  background-color: #eaeaea;
+  border-left: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  border-top: 1px solid #ddd;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+input{
+  flex-grow: 1;
+  border: 1px solid #ddd;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  padding-left: 6px;
+}
+input:focus{
+  outline-style: none;
+}
+
+.results_container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding: 20px;
 }
