--- a/src/App.css
+++ b/src/App.css
@@ -28,14 +28,39 @@
   width: 100%;
   height: 100vh;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin-top: 100px;
 }
 
-.main_container{
+.main_container, .nav_container{
   max-width: 70%;
   width: 60%;
 }
+
+.nav {
+  width: 60%;
+  display: flex;
+  margin-bottom: 6px;
+  }
+
+.nav a{
+  padding: 12px;
+  border-radius: 6px;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  font-size: 16px;
+}
+.nav-link:first-child{
+  margin-right: 8px;
+} 
+
+.nav-link.active {
+  color: #000000;
+  font-weight: 700;
+  background-color: #97cce8;
+}
+
 
 .search_container {
   display: flex;
@@ -67,7 +92,17 @@ input:focus{
 
 .results_container{
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
   padding: 20px;
+}
+
+.card_container h4{
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  color: #4778b3;
+
+}
+.card_container img{
+  max-height: 400px;
 }
